<resources>
    <string name="app_name">NFT U</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nft">NFT</string>
    <string name="title_wallet">Wallet</string>
    <string name="hint_search">Search for collection, item..</string>
    <string name="categories">Categories</string>
    <string name="top_collections">Top Collections</string>
    <string name="see_all">See All</string>
    <string name="explore">Explore</string>
    <string name="upload">Upload</string>
    <string name="view_art">View Art</string>
    <string name="art">Art</string>
    <string name="maleficent_135">Maleficent #135</string>
    <string name="description">Description</string>
    <string name="sample_description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Amet minim mollit non deserunt.</string>
    <string name="sample_bid_1">2.00 $</string>
    <string name="sample_user_1">Avril15</string>
    <string name="sample_bid_2">3.40 $</string>
    <string name="sample_user_2">Pansi74</string>
    <string name="current_bid">Current Bid</string>
    <string name="current_bid_amount">50.29 ETH</string>
    <string name="ending_in">Ending In</string>
    <string name="sample_bid_ending_time">22:56:23</string>
    <string name="highest_bid">Highest Bid</string>
    <string name="place_bid">Place Bid</string>
    <string name="follow">Follow</string>
    <string name="nft_no_sample">258</string>
    <string name="items">Items</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="created">Created</string>
    <string name="nft_followers_sample">1.2k</string>
    <string name="total_following_sample_no">160</string>
    <string name="total_created_sample_no">1k</string>
</resources>