<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.digital.nftu.presentation.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_details"
            app:destination="@id/navigation_product_details"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.digital.nftu.presentation.views.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.digital.nftu.presentation.views.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_product_details"
        android:name="com.digital.nftu.presentation.views.product.ProductDetailsFragment"
        android:label="@string/view_art"
        tools:layout="@layout/fragment_product_details" />
</navigation>