<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore"
        app:showAsAction="always"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_upload"
        app:showAsAction="always"
        android:title="" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats"
        app:showAsAction="always"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_dashboard"
        app:showAsAction="always"
        android:title="@string/title_dashboard" />
</menu>